fix wrap in reply bodies

--- a/src/App.css
+++ b/src/App.css
@@ -435,3 +435,8 @@ label .indicator > i {
   flex-direction: row;
 }
 
+.replyInfo > pre {
+  overflow-wrap: break-word;
+  white-space: normal;
+}
+
